changed and added methods