@@ -4,7 +4,6 @@ import kg.attractor.job_search_project.dto.RespondedApplicantDto;
 import kg.attractor.job_search_project.dto.ResumeDto;
 import kg.attractor.job_search_project.model.RespondedApplicant;
 import kg.attractor.job_search_project.model.Resume;
-import kg.attractor.job_search_project.model.Vacancy;
 import kg.attractor.job_search_project.service.ResumeService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -45,7 +44,7 @@ public class ResumeServiceImpl implements ResumeService {
     }
 
     @Override
-    public List<ResumeDto> getAllVacancyByCategory(String category) {
+    public List<ResumeDto> getAllResumeByCategory(String category) {
 
         List<Resume> resumes=userDao.searchByCategory(category);
         if (resumes!=null && !resumes.isEmpty()){
@@ -103,9 +102,24 @@ public class ResumeServiceImpl implements ResumeService {
     }
 
     @Override
-    public List<Vacancy> getSearchForAnEmployer(String name) {
-        //TODO логика поиска работодателя
+    public List<ResumeDto> getAllResume() {
+        List<Resume> resumeList = userDao.getResume();
+        if(!resumeList.isEmpty()){
+            return resumeList.stream()
+                    .map(resume -> ResumeDto.builder()
+                            .id(resume.getId())
+                            .applicantId(resume.getApplicantId())
+                            .name(resume.getName())
+                            .categoryId(resume.getCategoryId())
+                            .salary(resume.getSalary())
+                            .isActive(resume.isActive())
+                            .createdDate(resume.getCreatedDate())
+                            .updateTime(resume.getUpdateTime())
+                            .build())
+                    .toList();
+        }
 
-        return List.of();
+        return Collections.emptyList();
     }
+
 }
